--- a/stig-rhel7-role.yml
+++ b/stig-rhel7-role.yml
@@ -810,6 +810,8 @@
         - NIST-800-171-3.1.13
         - NIST-800-171-3.13.10
         - DISA-STIG-RHEL-07-040410
+      ignore_errors: yes
+
     
     - name: Ensure permission 0600 on /etc/ssh/*_key
       file:
@@ -828,6 +830,7 @@
         - NIST-800-171-3.1.13
         - NIST-800-171-3.13.10
         - DISA-STIG-RHEL-07-040420
+      ignore_errors: yes
     
     - name: XCCDF Value var_auditd_action_mail_acct # promote to variable
       set_fact:
